Fixed typos, fixed streak, added readme

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                     </div>
 
                     <div class='column'>
-                        <p class="hint" id="appRow">Appearences in Symbol Descriptions</p>
+                        <p class="hint" id="appRow">Appearances in Symbol Descriptions</p>
                     </div>
 
                     <div class='column'>
-                        <p class="hint" id="itemAppRow">Appearences in Item Descriptions</p>
+                        <p class="hint" id="itemAppRow">Appearances in Item Descriptions</p>
                     </div>
 
                     <div class='column'>
@@ -99,7 +99,7 @@
             <p>Have an issue to report or a suggestion for the game?
             <br>DM MonstyrSlayr#3307 on Discord.
             <br>Luck Be a Landlord and all assets belong to TrampolineTales.
-            <br><a href="https://github.com/MonstyrSlayr/monstyrslayr.github.io/tree/main/lbaldle" target="_blank">Source Code</a></p>
+            <br><a href="https://github.com/MonstyrSlayr/LBALdle" target="_blank">Source Code</a></p>
         </div>
     </div>
 
